--- a/Genetics/Genetics/Genetics.vcxproj.filters
+++ b/Genetics/Genetics/Genetics.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="Gene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Population.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="MainWindow.qrc">
@@ -91,6 +94,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Gene.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Population.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
